--- a/DBReview/2. Owner DK PROD.ipynb
+++ b/DBReview/2. Owner DK PROD.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "pwsh"
@@ -25,7 +25,24 @@
      "kernelName": "pwsh"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31;1mTERM environment variable not set.\u001b[0m\n",
+      "Collected Details: Account - Owner-DK-Prod | Region - eu-central-1\n",
+      "Collected Details: Account - Owner-DK-Prod | Region - eu-west-2\n",
+      "Collected Details: Account - Owner-DK-Prod | Region - eu-west-1\n",
+      "Collected Details: Account - Owner-DK-Prod | Region - us-east-1\n",
+      "\n",
+      "\u001b[32;1mAccount      \u001b[0m\u001b[32;1m AccountID   \u001b[0m\u001b[32;1m Region   \u001b[0m\u001b[32;1m RDSInstances\u001b[0m\u001b[32;1m DynamoDBTables\u001b[0m\u001b[32;1m No.\u001b[0m\n",
+      "\u001b[32;1m-------      \u001b[0m \u001b[32;1m---------   \u001b[0m \u001b[32;1m------   \u001b[0m \u001b[32;1m------------\u001b[0m \u001b[32;1m--------------\u001b[0m \u001b[32;1m---\u001b[0m\n",
+      "Owner-DK-Prod 619122104288 eu-west-2            0              1   1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "Import-Module AWS.Tools.Common, AWS.Tools.DynamoDBv2, AWS.Tools.RDS\n",
     "Import-Module '/Users/conrad.gauntlett/WorkArea/Repos/DBA_MISC/PowerShell/Modules/DevOpsToolkit'\n",
